# string-operations-package

./: .flake8  .gitignore  CHANGES.txt  mkdocs.yaml  pyproject.toml  show_repo_tree.bash
docs/: about.md  functions.md  index.md  installation.md  setup_development_environment.md
requirements/: dev.txt  prod.txt
src/string_operations/: base_functions.py  business_functions.py  functions.py
tests/: test_base_functions.py  test_business_functions.py
