[project]
name = "string_operations_package"
version = "0.0.1"
description = "Your package description"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "João", email = "jgabrielsb@gmail.com" }]
dependencies = []
packages=[{ include = "string_operations", from=" src" }]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
